--- a/Lab-1/Lab-1_fall24.ipynb
+++ b/Lab-1/Lab-1_fall24.ipynb
@@ -9,9 +9,7 @@
     "\n",
     "1. Installation\n",
     "\n",
-    "2. Python basics\n",
-    "\n",
-    "<span style=\"color:blue\"> *There is NO due, it won't be graded. You can finish it at home or lab. You will need it since the 2nd week* </span>"
+    "2. Python basics\n"
    ]
   },
   {
@@ -92,7 +90,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 330 students\n"
