--- a/Lab-1/Lab-1_fall24.ipynb
+++ b/Lab-1/Lab-1_fall24.ipynb
@@ -58,7 +58,7 @@
     "1. `conda create -n eecs330 python=3.10`  <span style=\"color:blue\">You create a new environment (an \"universe\")</span>\n",
     "2. `conda activate eecs330`  <span style=\"color:blue\">You enter the environment. Want out? Using </span> `conda deactivate`\n",
     "3. `pip install jupyterlab notebook` <span style=\"color:blue\">Install the jupyter notebook, automatically! </span>\n",
-    "4. `jupyter notebook week_1.ipynb` <span style=\"color:blue\">Open the particular notebook file. </span>"
+    "4. `jupyter notebook Lab-1_fall24.ipynb` <span style=\"color:blue\">Open the particular notebook file. </span>"
    ]
   },
   {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -90,10 +90,17 @@
      ]
     },
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " Dr. Yao\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 330 students\n"
+      "hello, Dr. Yao\n"
      ]
     },
     {
@@ -113,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +129,7 @@
      "text": [
       "print with new line\n",
       "print without new line\n",
-      "print multiple variables separated by a space: 330 class 1 3.0 True\n"
+      "print multiple variables separated by a space: Dr. Yao 1 3.0 True\n"
      ]
     }
    ],
@@ -135,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
